Fixed Issue 5 on the Report (Bad contrast on the contact button)

--- a/style.css
+++ b/style.css
@@ -783,12 +783,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #1F1F1F!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #2F2F2F!important;
 }
 
 .ltc-white {
